maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: not found: value keepHandOnSideWall
    if (keepHandOnSideWall()){
        ^WallFollowerMaze:21: error: not found: value keepHandOnSideWall
keepHandOnSideWall():Boolean;{
^WallFollowerMaze:25: error: return outside method definition
    return true
    ^WallFollowerMaze:28: error: return outside method definition
    return false
    ^WallFollowerMaze:30: error: return outside method definition
  return false
  ^